tests/snapshots/integration_tests__example_dropout.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron Dropout(p):
  inputs:
    default: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,nn/Dropout
