tests/snapshots/integration_tests__example_higher_order_neuron.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron Stack(block, d_model, num_heads, d_ff, count = 6):
  inputs:
    default: [*, seq, d_model]
  outputs:
    default: [*, seq, d_model]
  graph:
    in -> blocks
    blocks -> out
